changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix for bug #2017790 "Cannot build talking books, listening books or signs".
Fixed the incorrect usage of the function can_build_over(), refactored and
simplified the code, made functions static, added test to prevent the same wall
from being rebuilt several times, do not remove the marking rune prematurely if
a listening book cannot be built.
 include/sproto.h
 server/build_map.c
Raphael Quinet 2008-07-19

Fix bug #2009686 "party password does not work if 8 characters long". 8 chars
long passwords broke with party_rejoin to auto rejoin on login due to 9 char
buffer and assuming the last char would always be an \n.
 server/login.c
Arvid Norlander 2008-07-18

Fix bug #2017648 "applying devourer weap causes crash", this was a division by
zero bug that affected any "personalized blessings" weapons with a willpower in
the range 0-1000. Also fix some minor issues in the same code block (reordering
tests and reusing a variable instead of fetching it using get_ob_key_value 
twice).
 server/apply.c
Arvid Norlander 2008-07-17

In debug log message, check for null value and substitute as needed - it is
not universal that printf("%s", NULL) will not crash.
MSW 2008-07-07

Fix for bug #2009802 "alchemy experience not stored correctly": Remove useless
and dangerous casts to uint16 because both source and destination variables
are of type int, and the experience points for several recipes do not fit in
16 bits.
 common/recipe.c
Raphael Quinet 2008-07-03

Partially update metaserver specification.
 doc/metaserver
Andreas Kirschbaum 2008-06-27

Don't reset image checksum.
 common/image.c